--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.avatar {
+  border-radius: 10%;
+  max-width: 500px;
+  max-height: 1000px;
+  position: relative;
+  top: 40px; 
+  left: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
