--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,9 @@
 
 .avatar {
   border-radius: 10%;
-  max-width: 500px;
-  max-height: 1000px;
-  position: relative;
+  max-width: 20%;
+  max-height: 20%;
+  /* position: relative; */
   top: 40px; 
   left: 20px;
 }
@@ -44,4 +44,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Custom-Div{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
 }
