--- a/src/Components.css
+++ b/src/Components.css
@@ -1,9 +1,9 @@
 .MyButton {
-    background-color:royalblue;
+    background-color:deeppink;
     color:white;
     border-color:white;
-    border-bottom-color:black;
-    border-right-color: black;
+    border-bottom-color: black;
+    border-right-color: gray;
     font-size: 20px;
     padding:20px 100px;
     border-radius: 10px;
